# pctg-engine-rust

./: .gitignore  BASELINE.md  Cargo.toml  PROGRESS.md  README.md  UNIMPLEMENTED.md  card_todo_list.md
RL_TRAIN/: README.md  config.py  evaluate.py  train.py
crates/ptcg-core/: Cargo.toml
crates/ptcg-core/src/: action.rs  card.rs  damage.rs  deck.rs  engine.rs  error.rs  lib.rs  observe.rs  replay.rs  rng.rs  rules.rs  state.rs  strategy.rs
crates/ptcg-core/src/effects/: common.rs  dispatch.rs  energy.rs  mod.rs  pokemon.rs  stadiums.rs  tools.rs  trainers.rs
crates/ptcg-py/: Cargo.toml  pyproject.toml
crates/ptcg-py/python/ptcg_gym/: __init__.py  config.py  env.py  opponent.py  render.py
crates/ptcg-py/python/tests/: test_env.py
crates/ptcg-py/src/: action_codec.rs  lib.rs
crates/ptcg-sim/: Cargo.toml
crates/ptcg-sim/src/: main.rs
docs/: ptcg-rl-background.md
logs/MaskablePPO_0/: events.out.tfevents.1778762364.LSY.local.83542.0  events.out.tfevents.1778829043.LSY.local.93228.0
manifest/: cards.yaml  manifest.yaml
manifest/decks/: charizard_pidgeot.yaml  miraidon.yaml
