[workspace]
resolver = "2"
members = [
    "crates/ptcg-core",
    "crates/ptcg-sim",
    "crates/ptcg-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["PTCG Rust Engine Team"]
license = "Apache-2.0"

[workspace.dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
rand = "0.8"
rand_chacha = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
proptest = "1.4"
tempfile = "3.8"

# Parallelism
rayon = "1.10"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1