[package]
name = "ptcg-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core PTCG engine with game logic, rules, and state management"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
tempfile = { workspace = true }

[lib]
name = "ptcg_core"
crate-type = ["lib", "cdylib"]