[package]
name = "ptcg-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "PTCG simulation runner for self-play and benchmarking"

[[bin]]
name = "ptcg-sim"
path = "src/main.rs"

[dependencies]
ptcg-core = { path = "../ptcg-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }